--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@mui/utils": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.29.0",
+    "axios": "^0.24.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.25.0",
     "faker": "^5.5.3",
