🐱‍🏍 Changed Tab width to 130

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,12 +4,7 @@
     "browser": true,
     "node": true
   },
-  "extends": [
-    "airbnb",
-    "prettier",
-    "plugin:jsx-a11y/recommended",
-    "plugin:react-hooks/recommended"
-  ],
+  "extends": ["airbnb", "prettier", "plugin:jsx-a11y/recommended", "plugin:react-hooks/recommended"],
   "plugins": ["prettier", "react", "react-hooks"],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
@@ -62,7 +57,7 @@
     "prettier/prettier": [
       2,
       {
-        "printWidth": 100,
+        "printWidth": 130,
         "singleQuote": true,
         "trailingComma": "none",
         "tabWidth": 2,
